--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
@@ -13,8 +14,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.8.0",
     "react-paginate": "^8.1.4",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
+    "react-redux": "^7.2.9",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^9.0.1",
     "redux-logger": "^3.0.6",
